src/snapshots/ruff__linter__tests__U009_U009_0.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
| # coding=utf8
|> utf-8 encoding declaration is unnecessary
  
  print('Hello world')

