src/snapshots/ruff__linter__tests__U009_U009_2.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
  #!/usr/bin/python
  # A coding comment is only valid in the first two lines, so this one is not checked.
  # -*- coding: utf-8 -*-
  
  print('Hello world')

