src/snapshots/ruff__linter__tests__U009_U009_3.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
  #!/usr/bin/python
  # -*- coding: something-else -*-
  
  print('Hello world')

