src/snapshots/ruff__linter__tests__U010_U010.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    UnnecessaryFutureImport:
      - generators
      - nested_scopes
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 48
  fix:
    patch:
      content: ""
      location:
        row: 1
        column: 0
      end_location:
        row: 2
        column: 0
    applied: false
- kind:
    UnnecessaryFutureImport:
      - unicode_literals
      - with_statement
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 55
  fix:
    patch:
      content: ""
      location:
        row: 3
        column: 0
      end_location:
        row: 4
        column: 0
    applied: false
- kind:
    UnnecessaryFutureImport:
      - absolute_import
      - division
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 48
  fix:
    patch:
      content: ""
      location:
        row: 5
        column: 0
      end_location:
        row: 6
        column: 0
    applied: false
- kind:
    UnnecessaryFutureImport:
      - generator_stop
  location:
    row: 7
    column: 0
  end_location:
    row: 7
    column: 37
  fix:
    patch:
      content: ""
      location:
        row: 7
        column: 0
      end_location:
        row: 8
        column: 0
    applied: false
- kind:
    UnnecessaryFutureImport:
      - generator_stop
      - print_function
  location:
    row: 9
    column: 0
  end_location:
    row: 9
    column: 53
  fix:
    patch:
      content: ""
      location:
        row: 9
        column: 0
      end_location:
        row: 10
        column: 0
    applied: false
- kind:
    UnnecessaryFutureImport:
      - generators
  location:
    row: 11
    column: 0
  end_location:
    row: 11
    column: 49
  fix:
    patch:
      content: from __future__ import invalid_module
      location:
        row: 11
        column: 0
      end_location:
        row: 11
        column: 49
    applied: false
- kind:
    UnnecessaryFutureImport:
      - print_function
      - with_statement
  location:
    row: 15
    column: 0
  end_location:
    row: 15
    column: 70
  fix:
    patch:
      content: from __future__ import invalid_module2
      location:
        row: 15
        column: 0
      end_location:
        row: 15
        column: 70
    applied: false

