src/snapshots/ruff__linter__tests__U011_U011.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: UnnecessaryLRUCacheParams
  location:
    row: 5
    column: 1
  end_location:
    row: 5
    column: 12
  fix: ~
- kind: UnnecessaryLRUCacheParams
  location:
    row: 10
    column: 1
  end_location:
    row: 10
    column: 22
  fix: ~
- kind: UnnecessaryLRUCacheParams
  location:
    row: 14
    column: 1
  end_location:
    row: 14
    column: 24
  fix: ~
- kind: UnnecessaryLRUCacheParams
  location:
    row: 18
    column: 1
  end_location:
    row: 18
    column: 34
  fix: ~

