src/snapshots/ruff__linter__tests__U011_U011_0.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: UnnecessaryLRUCacheParams
  location:
    row: 5
    column: 1
  end_location:
    row: 5
    column: 12
  fix: ~
- kind: UnnecessaryLRUCacheParams
  location:
    row: 11
    column: 1
  end_location:
    row: 11
    column: 22
  fix: ~
- kind: UnnecessaryLRUCacheParams
  location:
    row: 16
    column: 1
  end_location:
    row: 16
    column: 24
  fix: ~
- kind: UnnecessaryLRUCacheParams
  location:
    row: 21
    column: 1
  end_location:
    row: 21
    column: 34
  fix: ~

