src/snapshots/ruff__linter__tests__U011_U011_1.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
  import functools
  
  
  def lru_cache(maxsize=None):
      pass
  
  
  @lru_cache()
  def dont_fixme():
      pass
  
  
  @lru_cache(maxsize=None)
  def dont_fixme():
      pass

